--- a/paper/2022_RAGE_Priority_Driven_Real_Time_Scheduling_in_ROS2_Potential_and_Challenges/challenges_with_real_time_gpu_acceleration.tex
+++ b/paper/2022_RAGE_Priority_Driven_Real_Time_Scheduling_in_ROS2_Potential_and_Challenges/challenges_with_real_time_gpu_acceleration.tex
@@ -14,7 +14,7 @@
         \begin{itemize}
             \item ROS 2 で設計された多くのアプリケーションは, GPU アクセラレータでのカーネル実行に非同期モデルと非構造化モデルを利用している
             \item これにより, 個々の ROS 2 ノードからの直接的なリソース割り当てとアクセラレータカーネルの呼び出しが促進されるが, これにより, 特に多くのノードが同じアクセラレータリソースを要求する場合に, 予測できないリアルタイムの動作が発生する可能性がある
-            \item 自動運転車を含む複雑なソフトウェアスタックに共有アクセラレーターリソースを利用することは, 最新のコンピュータおよびアクセラレーターアーキテクチャでは避けられない
+            \item 自動運転車を含む複雑なソフトウェアスタックに共有アクセラレータリソースを利用することは, 最新のコンピュータおよびアクセラレータアーキテクチャでは避けられない
             \item 本論文の進行中の作業は, リソースに制約のあるシステムでリアルタイムの GPU カーネル実行管理を提供することに重点を置いている
         \end{itemize}
     \end{frame}
@@ -27,7 +27,7 @@
 \begin{frame}{共有アクセラレータの問題点}
     \begin{itemize}
         \item 自動運転スタックの場合, Perception, Localization, Mapping など多くの処理チェーンで GPU ベースのアクセラレータが必要になる
-        \item リソースに制約のあるシステムの場合, 優先度の低いチェーンが共有アクセラレーターリソースを既に利用している場合, 優先度の高いチェーンは優先度の逆転により深刻なレイテンシやデッドラインミスが発生する
+        \item リソースに制約のあるシステムの場合, 優先度の低いチェーンが共有アクセラレータリソースを既に利用している場合, 優先度の高いチェーンは優先度の逆転により深刻なレイテンシやデッドラインミスが発生する
     \end{itemize}
 \end{frame}
 
