--- a/paper/2022_RAGE_Priority_Driven_Real_Time_Scheduling_in_ROS2_Potential_and_Challenges/priority_driven_chain_aware_scheduling.tex
+++ b/paper/2022_RAGE_Priority_Driven_Real_Time_Scheduling_in_ROS2_Potential_and_Challenges/priority_driven_chain_aware_scheduling.tex
@@ -40,7 +40,7 @@
 
 \begin{frame}{評価に使用する KPI3 [Behavior Planner のジッタ]}
     \begin{itemize}
-        \item Behavior Planner ノードは, 設定された周期 $(100 \mathrm{msec})$ に従って, 正確に定期的に実行する必要がある
+        \item Behavior Planner ノードは, 設定された周期 ($100$ msec) に従って, 正確に定期的に実行する必要がある
         \item したがって, Behavior Planner ノードのジッタは低いほど良い
     \end{itemize}
 \end{frame}
@@ -93,7 +93,7 @@
 \begin{frame}{[Behavior Planner のジッタ] 結果}
     \fitimage{
         \begin{itemize}
-            \item 100 msec からのずれはジッタを示しているため, 観測値の範囲が小さいほど良い
+            \item ($100$ msec) からのずれはジッタを示しているため, 観測値の範囲が小さいほど良い
             \item ROS 2-PiCAS は全ての構成で ROS 2-default よりも優れている
         \end{itemize}
     }{planner_jitter}
