--- a/paper/2022_RAGE_Priority_Driven_Real_Time_Scheduling_in_ROS2_Potential_and_Challenges/real_time_support_for_multi_threaded_executors.tex
+++ b/paper/2022_RAGE_Priority_Driven_Real_Time_Scheduling_in_ROS2_Potential_and_Challenges/real_time_support_for_multi_threaded_executors.tex
@@ -30,7 +30,7 @@
 
 \begin{frame}{進行中の作業}
     \begin{itemize}
-        \item マルチスレッドエグゼキュータを, グローバルスケジューラとしてモデル化し, 従来のノンプリエンプティブグローバルタスクスケジューリング手法を ROS 2 環境に拡張する
+        \item マルチスレッドエグゼキュータを, グローバルスケジューラとしてモデル化し, 従来のノンプリエンプティブグローバルタスクスケジューリング手法を ROS~2 環境に拡張する
         \item PiCAS をマルチスレッドエグゼキュータに拡張して, 優先度に基づくスケジューリングを可能にし, エンドツーエンドレイテンシと予測可能性を向上させる
     \end{itemize}
 \end{frame}
