--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/experiments.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/experiments.tex
@@ -63,7 +63,7 @@
         \hlink{theorem3}{Theorem 3}, \hlink{theorem2}{Theorem 2} によって実行されるスケジューラビリティテスト
     \end{block}
     \begin{block}{SIMU}
-        以下の条件のもとで行った5000 時間単位のシミュレーションにおける各チェーンの観測された最大応答時間
+        以下の条件のもとで行った 5${,}$000 時間単位のシミュレーションにおける各チェーンの観測された最大応答時間
         \setlength{\linewidth}{0.98\columnwidth}
         \footnotesize
         \begin{itemize}
@@ -176,7 +176,7 @@
 
 \begin{frame}{実験方法}
     \begin{itemize}
-        \item 2スレッドのマルチスレッドエグゼキュータとシングルスレッドエグゼキュータでそれぞれ5分間実行し, 各チェーンの平均ケース応答時間 (ACRT) と最悪応答時間 (WCRT) を測定する (これは安全境界ではない) 
+        \item 2スレッドのマルチスレッドエグゼキュータとシングルスレッドエグゼキュータでそれぞれ5分間実行し, 各チェーンの平均ケース応答時間 (ACRT) と最悪応答時間 (WCRT) を測定する (これは安全境界ではない)
         \item \hlink{theorem2}{Theorem 2} により各チェーンの最悪応答時間を計算し, 観測された下限と比較する
     \end{itemize}
 \end{frame}
