--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/main.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/main.tex
@@ -25,23 +25,23 @@
 
 \maketitle
 
-\summary{-5}{2}
-\input{abstract.tex}
+% \summary{-5}{2}
+% \input{abstract.tex}
 
 \begin{frame}{Outline}
     \setbeamertemplate{section in toc}[sections numbered]
     \tiny\tableofcontents[hideallsubsections]
 \end{frame}
 
-\input{prior_knowledge.tex}
-\input{introduction.tex}
-\input{related_work.tex}
-\input{background_and_system_model.tex}
-\forme{\input{challenges.tex}}
-\input{priority_driven_chain_aware_scheduling.tex}
+% \input{prior_knowledge.tex}
+% \input{introduction.tex}
+% \input{related_work.tex}
+% \input{background_and_system_model.tex}
+% \forme{\input{challenges.tex}}
+% \input{priority_driven_chain_aware_scheduling.tex}
 \input{analysis_of_end_to_end_latency.tex}
-\input{evaluation.tex}
-\input{conclusion.tex}
+% \input{evaluation.tex}
+% \input{conclusion.tex}
 
 \lastpage
 
