--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/analysis_of_end_to_end_latency.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/analysis_of_end_to_end_latency.tex
@@ -28,6 +28,16 @@
     \forme{セグメントを単一のコールバックと見なせる理由は, $\Gamma^{c}$ のタイマコールバックがその周期に基づいて到着すると, 残りのコールバックはその前のコールバックの完了によって直接トリガーされるため}
 \end{frame}
 
+\begin{frame}{セグメント例}
+    \fullimage{segment_exa}
+\end{frame}
+
+
+\begin{frame}{状況整理}
+    \fullimage{proof_prior}
+\end{frame}
+
+
 \begin{frame}{$\eta_{i}\left(t, \tau_{k}\right)$}
     \vspace{-1mm}
     $\eta_{i}\left(t, \tau_{k}\right)$ は, 任意の時間間隔 $t$ の間に, セグメント $\Phi_{i} \subset \Gamma^{c}$ に干渉するコールバック $\tau_{k} \in \Gamma^{c^{\prime}}$ の到着の最大数
@@ -35,7 +45,7 @@
     \begin{block}{$\eta_{i}\left(t, \tau_{k}\right)$}
         \vspace{-2mm}
         \begin{equation*}
-            \eta_{i}\left(t, \tau_{k}\right)= \begin{cases}{\left[\frac{t}{\mathcal{T}_{\Gamma^{c^{\prime}}}}\right]} & \text {, if } \pi_{\Gamma^{c^{\prime}}}>\pi_{\Gamma^{c}} \wedge P\left(\Phi_{i}\right)=P\left(\tau_{k}\right) \\ 0 &, \text { otherwise }\end{cases}
+            \eta_{i}\left(t, \tau_{k}\right)= \begin{cases}{\lceil\frac{t}{\mathcal{T}_{\Gamma^{c^{\prime}}}}\rceil} & \text {, if } \pi_{\Gamma^{c^{\prime}}}>\pi_{\Gamma^{c}} \wedge P\left(\Phi_{i}\right)=P\left(\tau_{k}\right) \\ 0 &, \text { otherwise }\end{cases}
         \end{equation*}
         \vspace{-2mm}
         \setlength{\linewidth}{0.98\columnwidth}
@@ -46,6 +56,66 @@
         \end{itemize}
     \end{block}
 \end{frame}
+
+\begin{frame}{}
+    \begin{itemize}
+        \item 証明は, 次の 2 つの場合を考えることによって行うことができる
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{}
+    \fitimage{
+        \begin{itemize}
+            \item 最初のケースは, $\tau_{k}$ のチェーンが $\Phi_{i}\left(\pi_{\Gamma^{c^{\prime}}}>\pi_{\Gamma^{c}}\right)$ のチェーンよりもセマンティックな優先度が高く, 干渉タスク $\tau_{k}$ が $\Phi_{i}\left(P(\Phi)=P\left(\tau_{k}\right)\right)$ と同じ $\mathrm{CPU}$ にある場合である
+            \item この場合, $\tau_{k}$ は, 到着するたびに $\Phi_{i}$ に干渉する可能性がある
+        \end{itemize}
+    }{proof_case1}
+\end{frame}
+
+\begin{frame}{}
+    \fitimage{
+        \begin{itemize}
+            \item システムが過負荷でない場合, $\tau_{k}$ は $T_{\Gamma^{c^{\prime}}}$ ごとに到着する可能性がある
+            \item 一方, システムが過負荷で, $\Gamma^{c^{\prime}}$ のすべてのコールバックが同じ $\mathrm{CPU}$ にある場合, $\tau_{k}$ の到着間隔は, $\Gamma^{c^{\prime}}$ のすべてのコールバックの実行時間の合計よりも短くすることはできない
+            \item したがって,  $\mathcal{T}_{\Gamma^{c^{\prime}}}$ は,  $\tau_{k}$ の到着期間を制限するために, これら 2 つの最大値を取る
+        \end{itemize}
+    }{min_period}
+\end{frame}
+
+\begin{frame}{}
+    \fitimage{
+        2 番目のケースには, 最初のケースでは考慮されない他のすべての条件が含まれる
+    }{proof_case2}
+\end{frame}
+
+\begin{frame}{条件毎の分析}
+    \begin{itemize}
+        \item (i) $\pi_{\Gamma^{c^{\prime}}}>\pi_{\Gamma^{c}}$ と $\tau_{k}$ が異なるコア上にある場合, $\tau_{k}$ は明らかに $\Phi_{i}$ に干渉を引き起こさない
+        \item (ii) $\pi_{\Gamma^{c^{\prime}}}=\pi_{\Gamma^{c}}$ の場合, $\tau_{k}$ と $\Phi_{i}$ は同じチェーンからのものであり, 補題 1 により互いに干渉しない
+        \item (iii) $\pi_{\Gamma^{c^{\prime}}}<\pi_{\Gamma^{c}}$ の場合, $\tau_{k}$ が$\Phi_{i}$ のエグゼキュータよりも優先度の高いエグゼキュータに存在できるかどうかを考える
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{ケース (iii)の分析}
+    戦略 VI により, $\tau_{k}$ は $\Phi_{i}$ と同じかそれよりも優先度の低いエグゼキューターに割り当てられる
+    \begin{block}{戦略 VI}
+        \setlength{\linewidth}{0.98\columnwidth}
+        \begin{itemize}
+            \item $\pi_{\Gamma^{c}}<\pi_{\Gamma^{c^{\prime}}}$ である同じ CPU 上の2つのチェーン $\Gamma^{c}$, $\Gamma^{c^{\prime}}$ を考える
+            \item CPU に複数のチェーンからのコールバックがある場合, $\Gamma^{c^{\prime}}$ のコールバックを含むエグゼキュータは, $\Gamma^{c}$ のコールバックを含むエグゼキュータ以上の優先度を割り当てる
+        \end{itemize}
+    \end{block}
+\end{frame}
+
+\begin{frame}{ケース (iii)の分析}
+    \fitimage{
+        \begin{itemize}
+            \item $\tau_{k}$ が優先順位の低いエグゼキュータにある場合, 干渉は発生しない
+            \item $\tau_{k}$ が同じエグゼキューターにある場合, Alg によって $\Phi_{i}$ よりも優先順位が低くなるので $\Phi_{i}$ への干渉遅延を引き起こすことはできない
+        \end{itemize}
+    }{alg1}
+\end{frame}
+
 
 \begin{frame}{$B_i$}
     $B_i$ は, セグメント $\Phi_{i}$ の最大ブロック時間
