--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/background_and_system_model.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/background_and_system_model.tex
@@ -80,6 +80,10 @@
     \end{itemize}
 \end{frame}
 
+\begin{frame}{ROS2 における2重スケジューリング}
+    \fullimage{ros2_scheduling}
+\end{frame}
+
 \forme{
     \begin{frame}{チェーン優先度の意味合い}
         \begin{itemize}
