--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/main.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/main.tex
@@ -36,20 +36,20 @@
 % \input{prior_knowledge.tex}
 % \input{introduction.tex}
 % \input{related_work.tex}
-% \input{background_and_system_model.tex}
+\input{background_and_system_model.tex}
 % \forme{\input{challenges.tex}}
-% \input{priority_driven_chain_aware_scheduling.tex}
+\input{priority_driven_chain_aware_scheduling.tex}
 \input{analysis_of_end_to_end_latency.tex}
 % \input{evaluation.tex}
 % \input{conclusion.tex}
 
 \lastpage
 
-\section*{Reference}
-\begin{frame}[allowframebreaks]{Reference}
-    \beamertemplatetextbibitems
-    \bibliographystyle{unsrt}
-    \bibliography{\beamerDir/bibtex/master_reference}
-\end{frame}
+% \section*{Reference}
+% \begin{frame}[allowframebreaks]{Reference}
+%     \beamertemplatetextbibitems
+%     \bibliographystyle{unsrt}
+%     \bibliography{\beamerDir/bibtex/master_reference}
+% \end{frame}
 
 \end{document}
