chore: update template

--- a/template.tex
+++ b/template.tex
@@ -6,16 +6,10 @@
 \input{\beamerDir/setting.tex}
 
 
-%%%%% Mode %%%%%
-% \newcommand{\forme}[1]{#1}
-\newcommand{\forme}[1]{}
-
-
 %%%%% Front Cover %%%%%
 \title{Title}
 \subtitle{conference, year}
-\author{矢野 篤志}
-% \date{\today}
+\author{Name}
 \institute[EMBIV]{EMBIV}
 \logo{\begin{textblock*}{0.1\linewidth}(2pt, 237pt)\includegraphics[scale=0.4]{\beamerDir/master_figure/Emb_logo.pdf}\end{textblock*}}
 
